Changelog
=========

2.1.3 (unreleased)
------------------

* Added the ability to configure a Salesforce Contact adapter using
  the wizard.
  [yomatters]

* Updated popup form so that it closes correctly with
  plone.app.jquerytools 1.2b4.
  [yomatters]

2.1.2 (2011-04-21)
------------------

* Added 'Lead Source' setting to the Salesforce.com wizard step.
  [davisagli]

2.1.1 (2011-04-08)
------------------

* Fix issue with editing string fields on the new defaults control panel.
  [davisagli]

2.1 (2011-03-24)
----------------

* Added 'Campaign Status' setting to the Salesforce.com wizard step.
  [davisagli]

2.1b3 (2011-03-22)
------------------

* Added a control panel in Site Setup to configure default values that will
  be used for new Megaphones.
  [davisagli]

* Fix javascript error affecting IE.
  [davisagli]

* Added render_recipients_list helper to the letter renderer.
  [davisagli]

* Revamped the UI of the fields wizard step. Field settings are now configured
  in an overlay.
  [davisagli]

2.1b2 (2010-11-16)
------------------

* Added a way to provide additional template variables by implementing an
  IVariableProvider adapter.
  [davisagli]

2.1b1 (2010-10-14)
------------------

* Raise AT ObjectInitializedEvent and ObjectEditedEvent when the wizard is finished.
  [davisagli]

* Updated the test setup to use a layer so that it can be extended by Megaphone
  plugins more easily.
  [davisagli]

* Added an upgrade step to remove the old "optional-recipients" field which is
  no longer needed.
  [davisagli]

* Revamped the UI of the recipients wizard step.  Recipient settings are now
  configured in an overlay.
  [davisagli]

* Introduced the concept of pluggable "recipient sources".  Each recipient source
  has its own settings, can provide content for the Megaphone form, and is queried
  for recipients when the form is submitted.  The old recipient functionality
  (with "required" and "optional" recipients) has been refactored into the "standard"