@@ -4,6 +4,9 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
+* Added a description field to the general wizard step.
+  [yomatters]
+
 * Added the ability to configure a Salesforce Contact adapter using
   the wizard.
   [yomatters]
